EEP-RAN-238: Ranger Hive plugin fails when trying to enable it on Java 17 env